log
Thu, Oct  2, 2025  3:30:46 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, Oct  2, 2025 10:39:49 AM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:19: error: 'nodo' undeclared (first use in this function)
       int valor = nodo->sudo[i][j];
                   ^~~~
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = nodo->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
905e4d0
Thu, Oct  2, 2025 10:40:37 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
1749251
Thu, Oct  2, 2025 10:43:19 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
sudoku.c:69:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
fd61290
Thu, Oct  2, 2025 10:50:32 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'for'
   for(int i = 0 ; i < 9 ; i++)
   ^~~
sudoku.c:52:7: error: 'aparece' undeclared (first use in this function)
       aparece[k] = 0;
       ^~~~~~~
sudoku.c:52:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:77:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
3101b78
Thu, Oct  2, 2025 10:50:58 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:77:11: error: unused variable 'valor' [-Werror=unused-variable]
       int valor = n->sudo[i][j];
           ^~~~~
cc1.exe: all warnings being treated as errors
78b12cb
Thu, Oct  2, 2025 10:52:06 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|4
total_score: 20/70
1a9ce2b
Thu, Oct  2, 2025 10:55:34 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|4
total_score: 20/70
ac9a677
Thu, Oct  2, 2025 11:12:08 AM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 20/70
ded4941
Thu, Oct  2, 2025 11:20:42 AM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:105:32: error: 'nodo' undeclared (first use in this function)
             Node* nuevo = copy(nodo);
                                ^~~~
sudoku.c:105:32: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:109:31: error: 'lista' undeclared (first use in this function)
               pushBack(nuevo, lista);
                               ^~~~~
sudoku.c:109:24: error: passing argument 1 of 'pushBack' from incompatible pointer type [-Werror=incompatible-pointer-types]
               pushBack(nuevo, lista);
                        ^~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'List * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
956de9b
Thu, Oct  2, 2025 11:21:13 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:105:32: error: 'nodo' undeclared (first use in this function)
             Node* nuevo = copy(nodo);
                                ^~~~
sudoku.c:105:32: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:109:24: error: 'lista' undeclared (first use in this function)
               pushBack(lista, nuevo);
                        ^~~~~
941d8d7
Thu, Oct  2, 2025 11:21:28 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:109:24: error: 'lista' undeclared (first use in this function)
               pushBack(lista, nuevo);
                        ^~~~~
sudoku.c:109:24: note: each undeclared identifier is reported only once for each function it appears in
57e3730
Thu, Oct  2, 2025 11:21:49 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ddb6b8a
Thu, Oct  2, 2025 11:46:56 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
b084a5a
Thu, Oct  2, 2025 11:49:04 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:125:11: error: 'Node {aka struct <anonymous>}' has no member named 'sodo'; did you mean 'sudo'?
       if(n->sodo[i][j] != 0) return 1;
           ^~
dd0e760
Thu, Oct  2, 2025 11:49:21 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
21f5f44
Thu, Oct  2, 2025 11:51:25 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
73e8c5c
Thu, Oct  2, 2025 11:54:03 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
30b698f
Sun, Oct  5, 2025  1:31:19 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:137:9: error: passing argument 1 of 'pop' from incompatible pointer type [-Werror=incompatible-pointer-types]
     pop(actual);
         ^~~~~~
In file included from test.c:4:0:
list.h:31:6: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void pop(Stack* s);
      ^~~
cc1.exe: all warnings being treated as errors
faf8af4
Sun, Oct  5, 2025  1:32:00 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
da1fb86
Sun, Oct  5, 2025  1:41:25 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|2
total_score: 45/70
30c2974
Sun, Oct  5, 2025  1:43:07 AM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
a226a47
Sun, Oct  5, 2025  1:46:44 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
24851f8
